# RealtimeSmokeSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
assets/config/: cloudProperties.json
assets/shader/cloud/: camera.glsl  cloud.frag  cloud.glsl  cube.frag  cube.vert  light.frag  math.glsl  quad.frag  quad.vert  sphere.vert
assets/shader/smoke/: advectSmoke.comp  applyGravity.comp  copyVelocityBuffer.comp  forceIncompressibility.comp  smoke.frag  smoke.vert
assets/shader/smoke/2d/: advectVelocities.comp  applyGravity.comp  copySmokeBuffer.comp  extrapolate.comp  quad.vert  smoke.frag  smokeHeader.glsl
assets/shader/smoke/3d/: advectSmoke.comp  advectVelocities.comp  applyGravity.comp  copySmokeBuffer.comp  copyVelocityBuffer.comp  cube.frag  cube.vert  extrapolate.comp  forceIncompressibility.comp  smokeHeader.glsl
data/shader/: mandelbulb.vert  triangle.frag  triangle.vert
data/shader/mandelbulb/: mandelbulb.frag
data/shader/smoke/: advectSmoke.comp  advectVelocities.comp  applyGravity.comp  copySmokeBuffer.comp  copyVelocityBuffer.comp  extrapolate.comp  forceIncompressibility.comp  smoke.frag  smoke.vert  smokeHeader.glsl
src/: controls.cpp  controls.h  gui.cpp  gui.h  main.cpp  mesh.cpp  mesh.h  mesh.hpp  shader.cpp  shader.h  shader.hpp  util.h  window.cpp  window.h
src/2d/: main.cpp
src/3d/: main.cpp  util.h
src/cloud/: main.cpp
